# sharedlibrary

./: .travis.yml  CMakeLists.txt  README.md  _clang-format  appveyor.yml  conanfile.txt
src/: CMakeLists.txt  SharedLibrary.cpp  SharedLibrary.hpp  main.cpp
